Chapter 06/k8s-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-internal-service
  namespace: default
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: my-nodeport-service
  namespace: default
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
      nodePort: 30036
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: my-loadbalancer-service
  namespace: default
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
  type: LoadBalancer


# This YAML defines three services for the my-app application:

#     ClusterIP Service: Exposes the service internally within the cluster on port 80, targeting port 9376 on the pods.

#     NodePort Service: Exposes the service externally on each node's IP at port 30036, forwarding traffic to port 80 of the service, which targets port 9376 on the pods.

#     LoadBalancer Service: Provisions an external load balancer (if supported by the Kubernetes environment) to expose the service externally on port 80, targeting port 9376 on the pods.

# Ensure that the pods have the label app: my-app to match the selectors specified in these services.

# For more information on Kubernetes services, refer to the official documentation: https://kubernetes.io/docs/concepts/services-networking/service/
